--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/lucasluizss/API#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "mongoose": "^5.4.17",
     "nodemon": "^1.18.10",
     "path": "^0.12.7",
-    "swagger-ui-express": "^4.0.1"
+    "swagger-ui-express": "^4.0.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -35,6 +37,7 @@
     "@babel/runtime": "^7.3.1",
     "babel-loader": "^8.0.5",
     "body-parser": "^1.18.3",
+    "eslint": "^5.15.0",
     "gulp-babel": "^8.0.0",
     "regenerator-runtime": "^0.13.1",
     "webpack": "^4.29.3",
